dark mode button color fixes

--- a/src/scss/_dark.scss
+++ b/src/scss/_dark.scss
@@ -2,10 +2,14 @@
 
 @include dark-mode {
   & {
-    color: $dark-mode-text;
-    background-color: $dark-mode-darken;
+    --#{$variable-prefix}body-color: #{$dark-mode-text};
+    --#{$variable-prefix}body-color-rgb: #{to-rgb($dark-mode-text)};
 
     --#{$variable-prefix}card-bg: #{$dark};
+    --#{$variable-prefix}card-bg-rgb: #{to-rgb($dark)};
+
+    color: $dark-mode-text;
+    background-color: $dark-mode-darken;
   }
 
   .text-body {
