--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -79,6 +79,7 @@ $text-muted-dark-opacity: .8 !default;
 
 $border-opacity: .16 !default;
 $border-dark-opacity: .24 !default;
+$border-active-opacity: .48 !default;
 
 $gray-50: #f8fafc !default;
 $gray-100: #f1f5f9 !default;
@@ -124,6 +125,9 @@ $border-color-transparent: rgba($text-muted, $border-opacity) !default;
 
 $border-color-dark: mix($text-muted, #ffffff, percentage($border-dark-opacity)) !default;
 $border-color-dark-transparent: rgba($text-muted, $border-dark-opacity) !default;
+
+$border-color-active: mix($text-muted, #ffffff, percentage($border-active-opacity)) !default;
+$border-color-active-transparent: rgba($text-muted, $border-active-opacity) !default;
 
 $active-bg: rgba($blue, .06) !default;
 $hover-bg: rgba($text-muted, .06) !default;
