--- a/src/scss/layout/_core.scss
+++ b/src/scss/layout/_core.scss
@@ -1,8 +1,10 @@
 // stylelint-disable property-no-vendor-prefix
-html {
+:root {
   font-size: 16px;
-  scroll-behavior: smooth;
   height: 100%;
+
+  --#{$variable-prefix}card-bg: #{$card-bg};
+  --#{$variable-prefix}card-bg-rgb: #{to-rgb($card-bg)};
 }
 
 body {
