--- a/src/scss/mixins/_functions.scss
+++ b/src/scss/mixins/_functions.scss
@@ -1,7 +1,3 @@
-@function hex-to-rgb($hex) {
-  @return red($hex), green($hex), blue($hex);
-}
-
 @function theme-color-lighter($color, $transparent: false) {
   @if ($transparent) {
     @return rgba($color, .1);
